--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
 	      </tr>
      	   </table>
 	</div>
+	    <div class="content">
 	      <p>This is a test</p>
+	    </div>
       </div>
     </div>
 
