--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		 <tr>
 			 <td>June 2, 2018</td>
 			 <td>Rocky Hill Congregational Church Crafts Fair</td>
-			 <td><a href="https://www.google.com/maps/place/Rocky+Hill+Congregational+Church/@41.6655605,-72.6388324,15z/data=!4m2!3m1!1s0x0:0x1a890cffaee86d8f?sa=X&ved=0ahUKEwio8Kjoi-rZAhXN21MKHa6HDkEQ_BIIcDAN">Directions</a></td>
+			 <td><a href="https://www.google.com/maps/place/Rocky+Hill+Congregational+Church/@41.6655605,-72.6388324,15z/data=!4m2!3m1!1s0x0:0x1a890cffaee86d8f?sa=X&ved=0ahUKEwio8Kjoi-rZAhXN21MKHa6HDkEQ_BIIcDAN" target="_blank">Directions</a></td>
 		      </tr>
 		    </table>
 	    </div>
