--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	  <ul>
 	     <li><a href="#about">ABOUT</a></li>
 	     <li><a href="#products">PRODUCTS</a></li>
-             <li><a href="#findUs">FIND US</a></li>
+             <li><a href="#findUs">CONNECT</a></li>
 	  </ul> 
 	</div>
 	  
