--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ $(document).ready(function(){
 
 	      
 	      <div class= "cards">
-	<p><h1>Upcoming Events<h1></p>
+	<p><h1>Upcoming Events</h1></p>
 	
 
 	<div class="cardTableDiv">
