--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <link type="text/css" media='(max-width: 750px)' rel="stylesheet" href="small.css" />
      <link type="text/css" media='(min-width: 750px)' rel='stylesheet' href='full.css' />
+     <link type="text/css" media='(min-width: 1300px)' rel='stylesheet' href='xl.css' />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
