--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ $(document).ready(function(){
 	</div>
 
 	      
-      <div class= "cards">
+    <!--  <div class= "cards">
 	<p>Upcoming Events</p>
 	
 
@@ -241,7 +241,7 @@ $(document).ready(function(){
 	 </div>   
 	  <div class="rightZone"><h1>Hello World</h1><div>    
       </div>
-    </div>
+    </div>-->
 
 
 
