--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@ $(document).ready(function(){
 	      
 	      
 	 </div>   
-	  <div class="rightZone"><h1>Hello World</h1><div>    
+	  <div class="rightZone"><h1>Hello World</h1></div>    -->
       </div>
-    </div>-->
+    </div>
 
 
 
